add docs right way

--- a/gh-pages/groovydoc/com/airdrawn/emailer/package-summary.html
+++ b/gh-pages/groovydoc/com/airdrawn/emailer/package-summary.html
@@ -112,12 +112,12 @@ Package com.airdrawn.emailer
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="Attachment.html" title="class in com/airdrawn/emailer">Attachment</A></B></TD>
-        <TD>PO(J/G)O to represent an email attachment.</TD>
+        <TD>POGO to represent an email attachment.</TD>
         </TR>
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="Email.html" title="class in com/airdrawn/emailer">Email</A></B></TD>
-        <TD>PO(J/G)O to represent an email.  </TD>
+        <TD>POGO to represent an email.  </TD>
         </TR>
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
