--- a/gh-pages/groovydoc/index-all.html
+++ b/gh-pages/groovydoc/index-all.html
@@ -136,7 +136,7 @@ function windowTitle()
 <dl>
 
 <dt><a href="com/airdrawn/emailer/Attachment.html" title="Class in com.airdrawn.emailer"><b>Attachment</b></a> - Class in <a href="./com/airdrawn/emailer/package-summary.html">com.airdrawn.emailer</a>
-</dt><dd>PO(J/G)O to represent an email attachment.</dd>
+</dt><dd>POGO to represent an email attachment.</dd>
 </dl>
 
     
@@ -178,7 +178,7 @@ function windowTitle()
 <dl>
 
 <dt><a href="com/airdrawn/emailer/Email.html" title="Class in com.airdrawn.emailer"><b>Email</b></a> - Class in <a href="./com/airdrawn/emailer/package-summary.html">com.airdrawn.emailer</a>
-</dt><dd>PO(J/G)O to represent an email.  </dd>
+</dt><dd>POGO to represent an email.  </dd>
 </dl>
 
     
